--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -52,3 +52,13 @@ h3 {
   margin-right: auto;
   width: 80%;
 }
+
+.left-image {
+  float: left;
+  padding: 0.1em 0.5em 0.1em 0em;
+}
+
+.right-image {
+  float: right;
+  padding: 0.1em 0em 0.1em 0.5em;
+}
