scene-highway: Add section about mirrored vehicles

--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -67,3 +67,9 @@ h3 {
     text-align: center;
     align: center;
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
