--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -2,6 +2,8 @@
   <head>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
+    <link rel="stylesheet" href="styles/main.css" type="text/css" />
+    <script src="scripts/table-of-contents.js"></script>
   </head>
   <body>
     <div class="header">
@@ -15,44 +17,52 @@
 </p>
 
     </div>
-    <div class="content">
+    <div class="content-positioner">
+      <div class="content">
 <!-- HEADER-END -->
-<h1>Scanarium Handbook</h1>
+<h1 id="root" class="document-generator-node">Scanarium Handbook</h1>
 
-<h2>Chapter 1</h2>
+<h2 id="chapter1" class="document-generator-node">Chapter 1</h2>
 <p>Some content</p>
-<h3>Chapter 1.1</h3>
+<h3 id="chapter1.1" class="document-generator-node">Chapter 1.1</h3>
 <p>Some content</p>
-<h3>Chapter 1.2</h3>
+<h3 id="chapter1.2" class="document-generator-node">Chapter 1.2</h3>
 <p>Some content</p>
-<h3>Chapter 1.3</h3>
+<h4 id="chapter1.2.1" class="document-generator-node">Chapter 1.2.1</h3>
 <p>Some content</p>
-<h3>Chapter 1.4</h3>
+<h4 id="chapter1.2.2" class="document-generator-node">Chapter 1.2.2 with some really, really, really long title</h3>
 <p>Some content</p>
-<h3>Chapter 1.5</h3>
+<h4 id="chapter1.2.3" class="document-generator-node">Chapter 1.2.3</h3>
 <p>Some content</p>
-
-<h2>Chapter 2</h2>
+<h3 id="chapter1.3" class="document-generator-node">Chapter 1.3</h3>
 <p>Some content</p>
-<h3>Chapter 2.1</h3>
+<h3 id="chapter1.4" class="document-generator-node">Chapter 1.4</h3>
 <p>Some content</p>
-<h3>Chapter 2.2</h3>
-<p>Some content</p>
-<h3>Chapter 2.3</h3>
+<h3 id="chapter1.5" class="document-generator-node">Chapter 1.5</h3>
 <p>Some content</p>
 
-<h2>Chapter 3</h2>
+<h2 id="chapter2" class="document-generator-node">Chapter 2 has a rather longish title again</h2>
+<p>Some content</p>
+<h3 id="chapter2.1" class="document-generator-node">Chapter 2.1</h3>
+<p>Some content</p>
+<h3 id="chapter2.2" class="document-generator-node">Chapter 2.2</h3>
+<p>Some content</p>
+<h3 id="chapter2.3" class="document-generator-node">Chapter 2.3</h3>
 <p>Some content</p>
 
-<h2>Chapter 4</h2>
+<h2 id="chapter3" class="document-generator-node">Chapter 3</h2>
 <p>Some content</p>
-<h3>Chapter 4.1</h3>
+
+<h2 id="chapter4" class="document-generator-node">Chapter 4</h2>
 <p>Some content</p>
-<h3>Chapter 4.2</h3>
+<h4 id="chapter4.1.1" class="document-generator-node">Chapter 4.1.1</h4>
 <p>Some content</p>
-<h3>Chapter 4.3</h3>
+<h3 id="chapter4.2" class="document-generator-node">Chapter 4.2</h3>
+<p>Some content</p>
+<h3 id="chapter4.3" class="document-generator-node">Chapter 4.3</h3>
 <p>Some content</p>
 <!-- FOOTER-START -->
+      </div>
     </div>
   </body>
 </html>
