--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -11,6 +11,16 @@ body {
   color: #fff;
 }
 
+.content-positioner {
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
 .content {
   width: 44em;
   margin-left:auto;
@@ -36,7 +46,9 @@ h3 {
 }
 
 .top-icon-list {
-  margin: 0.3em 0.3em 0em 0em;
+  margin: 0.3em 1.3em 0em auto;
+  width: 33%;
+  right: 0px;
   padding: 0.2em;
   text-align:right;
 }
@@ -44,6 +56,93 @@ h3 {
 .text-icon {
   width: 1.8em;
   vertical-align: bottom;
+}
+
+#toc-container {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    border-right: 0.1em solid black;
+    border-bottom: 0.1em solid black;
+    box-sizing: border-box;
+    overflow-y: auto;
+    z-index: 20;
+    background: white;
+}
+
+.toc-open #toc-container {
+    height: 100%;
+    border-right: 0.2em solid black;
+    border-bottom: none;
+}
+
+#toc-toggle {
+    width: 2em;
+    height: 2em;
+}
+
+.toc-open #toc-toggle {
+    display: none;
+}
+
+#toc {
+    display: none;
+    width: 20em;
+}
+.toc-open #toc {
+    display: block;
+}
+
+#toc, #toc ul {
+    list-style-type: none;
+}
+
+.toc-label {
+    margin: 0.2em 0em;
+    padding: 0em 0.2em;
+    border-radius: 0.5em;
+}
+
+.toc-label-selected {
+    background: #35c8ff;
+}
+
+.toc-label:hover {
+    background: #9ef2f9;
+}
+
+#toc {
+    margin: 0px;
+    padding: 0.2em 1em 0.2em 0.2em;
+}
+
+.toc-bullet {
+    transform: none;
+    transition: 250ms linear;
+}
+.toc-bullet.toc-collapsed {
+    transform: rotate(-90deg);
+    transition: 100ms linear;
+}
+ul.toc-collapsed {
+    display: none;
+}
+
+#toc a, #toc a:hover, #toc a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+#toc ul {
+    list-style-type: none;
+    padding-left: 1em;
+}
+
+.toc-bullet {
+    width: 1.5em;
+    cursor: pointer;
+    padding-right: 0em;
+    vertical-align: middle;
 }
 
 .big-image {
@@ -72,4 +171,74 @@ h3 {
     content: "";
     clear: both;
     display: table;
+}
+
+@media print {
+    #toc-container, .top-icon-list {
+        display: none;
+    }
+}
+
+@media (max-width: 90em) and (orientation: portrait) {
+    body {
+        font-size: 150%;
+    }
+
+    .toc-open .content-positioner {
+        top: 40%;
+    }
+
+    .content {
+        width: 95%;
+    }
+
+    #toc-container {
+        display: none
+        border: 1em solid green;
+    }
+
+    .toc-open #toc-container {
+        width: 100%;
+        height: 40%;
+        border-bottom: 0.2em solid black;
+        border-right: none;
+    }
+
+    .toc-open #toc {
+        width: 100%;
+    }
+
+    #toc-toggle {
+        width: 3em;
+        height: 3em;
+    }
+}
+
+@media (max-width: 90em) and (orientation: landscape) {
+    .content {
+        width: 95%;
+    }
+
+    .toc-open .content-positioner {
+        left: 30%;
+    }
+
+    #toc-container {
+        display: none
+        border: 1em solid green;
+    }
+
+    .toc-open #toc-container {
+        width: 30%;
+        height: 100%;
+    }
+
+    .toc-open #toc {
+        width: 100%;
+    }
+
+    #toc-toggle {
+        width: 3em;
+        height: 3em;
+    }
 }
