--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -38,11 +38,13 @@ h1 {
 }
 
 h2 {
-  padding-top: 4em;
+  margin-top: 3em;
+  padding-top: 1em;
 }
 
 h3 {
-  padding-top: 2em;
+  margin-top: 2em;
+  padding-top: 1em;
 }
 
 .top-icon-list {
