Templates: Set document title

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
     <script src="scripts/table-of-contents.js"></script>
+    <title>{=nodeTitle(root)}</title>
   </head>
   <body>
     <div class="header">
