CSS: When showing toc on the left, make it's background light grey
The different background color aids the eye to see that there's
something different on the left.

--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -72,7 +72,7 @@ h3 {
     box-sizing: border-box;
     overflow-y: auto;
     z-index: 20;
-    background: white;
+    background: #f2f2f2;
 }
 
 .toc-open #toc-container {
@@ -202,6 +202,7 @@ ul.toc-collapsed {
         height: 40%;
         border-bottom: 0.2em solid black;
         border-right: none;
+        background: white;
     }
 
     .toc-open #toc {
