Widen table-of-contents items vertically and indent less
This better separates items and regains some screen estate by
indenting less.

--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -148,7 +148,22 @@ ul.toc-collapsed {
 
 #toc ul {
     list-style-type: none;
-    padding-left: 1em;
+    padding-left: 0.8em;
+}
+
+.toc-label-l2.toc-label {
+    margin: 0em 0em 0.5em 0em;
+    padding: 0.5em 0.25em; /* */
+}
+
+.toc-label-l3.toc-label {
+    margin: 0em 0em 0.25em 0em;
+    padding: 0.25em 0.2em;
+}
+
+.toc-label-l4.toc-label, .toc-label-l5.toc-label, .toc-label-l6.toc-label {
+    margin: 0em 0em;
+    padding: 0.1em 0.1em;
 }
 
 .toc-bullet {
