--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -146,6 +146,11 @@ ul.toc-collapsed {
     text-decoration: none;
 }
 
+a.clickable-heading-link, a.clickable-heading-link:hover, a.clickable-heading-link:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
 #toc ul {
     list-style-type: none;
     padding-left: 0.8em;
