Switch from class `content` to id `content` in template
This makes it easier to extract the content element in Javascript.

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -80,7 +80,7 @@ languages.forEach(language => {
 
     </div>
     <div class="content-positioner">
-      <div class="content">
+      <div id="content">
 <!-- HEADER-END -->
 <h1 id="root" class="document-generator-node">Scanarium Handbook</h1>
 
