Add `todo` macro

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles/main.css" type="text/css" />
     <script src="scripts/table-of-contents.js"></script>
     <script src="scripts/clickable-headings.js"></script>
+    <script src="scripts/todos.js"></script>
     <title>{=nodeTitle(root)}</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
