--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -31,7 +31,10 @@ var pathname_in_language = function (pathname, language) {
   if (pathname.substring(pathname.length - 1, pathname.length) == '/') {
     pathname += 'index.html.' + language;
   } else {
-    pathname = location.pathname.replace(/\.[a-z]+$/i, '.' + language);
+    if (pathname.length > 5 && pathname.substring(pathname.length - 5, pathname.length) != '.html') {
+      pathname = location.pathname.replace(/\.[a-z]+$/i, '');
+    }
+    pathname += '.' + language;
   }
   return pathname;
 }
