html-template: Add link to sources on GitHub

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -181,7 +181,10 @@ window.onhashchange = function() {
 }
 window.onhashchange();
 </script>
-  <p class="impressum"><a href="https://quelltextlich.at/impressum.html">Impressum</a></p>
+  <p class="impressum">
+    <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/github.png"></img></a>
+    <a href="https://quelltextlich.at/impressum.html">Impressum</a>
+  </p>
 </div>
       </div>
     </div>
