html-template: Add license

--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -70,6 +70,10 @@ h4, h5, h6 {
   vertical-align: bottom;
 }
 
+.license-icon {
+  vertical-align: bottom;
+}
+
 #toc-container {
     position: fixed;
     left: 0px;
