--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
   </head>
@@ -182,6 +183,7 @@ window.onhashchange = function() {
 window.onhashchange();
 </script>
   <p class="impressum">
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="CC-BY-SA 4.0"><img class="license-icon" src="images/cc-by-sa-small.png"></img></a>
     <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/github.png"></img></a>
     <a href="https://quelltextlich.at/impressum.html">Impressum</a>
   </p>
