template: Follow move of icons under `images/icons`

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -19,11 +19,11 @@
     <div class="header">
 
 <p class="top-icon-list">
-<a href="https://scanarium.com/"><img class="text-icon" src="images/scanarium.png" alt="Scanarium icon"/></a>
-<a href="https://www.facebook.com/Scanarium-100188695203021"><img class="text-icon" src="images/facebook.png" alt="Facebook icon"/></a>
-<a href="https://www.instagram.com/scanarium/"><img class="text-icon" src="images/instagram.png" alt="Instagram icon"/></a>
-<a href="https://twitter.com/scanarium/"><img class="text-icon" src="images/twitter.png" alt="Twitter icon"/></a>
-<a href="https://www.youtube.com/channel/UCTwq7yR9KomRJythLrmhSyA"><img class="text-icon" src="images/youtube.png" alt="YouTube icon"/></a>
+<a href="https://scanarium.com/"><img class="text-icon" src="images/icons/scanarium.png" alt="Scanarium icon"/></a>
+<a href="https://www.facebook.com/Scanarium-100188695203021"><img class="text-icon" src="images/icons/facebook.png" alt="Facebook icon"/></a>
+<a href="https://www.instagram.com/scanarium/"><img class="text-icon" src="images/icons/instagram.png" alt="Instagram icon"/></a>
+<a href="https://twitter.com/scanarium/"><img class="text-icon" src="images/icons/twitter.png" alt="Twitter icon"/></a>
+<a href="https://www.youtube.com/channel/UCTwq7yR9KomRJythLrmhSyA"><img class="text-icon" src="images/icons/youtube.png" alt="YouTube icon"/></a>
 </p>
 
   <div id="top-language-selector">
@@ -49,7 +49,7 @@ var languagePicked = function() {
   }
 }
     </script>
-    <img id="top-language-selector-img" src="images/language-selector.png"></img>
+    <img id="top-language-selector-img" src="images/icons/language-selector.png"></img>
     <select id="top-language-selector-select" name="language" class="seethrough" onchange="languagePicked()" oninput="languagePicked()">
 <!-- LANGUAGE-OPTION -->
     </select>
@@ -193,8 +193,8 @@ document.addEventListener ("DOMContentLoaded", () => {
 });
 </script>
   <p class="impressum">
-    <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="CC-BY-SA 4.0"><img class="license-icon" src="images/cc-by-sa-small.png"></img></a>
-    <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/github.png"></img></a>
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="CC-BY-SA 4.0"><img class="license-icon" src="images/icons/cc-by-sa-small.png"></img></a>
+    <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/icons/github.png"></img></a>
     <a href="https://quelltextlich.at/impressum.html">Impressum</a>
   </p>
 </div>
