--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -84,6 +84,14 @@ h4, h5, h6 {
   border-bottom: 0.05em solid #ccc;
 }
 
+.slogan {
+  text-shadow: 2px 2px 4px #000;
+  font-size: 150%;
+  margin: 0em;
+  padding: 0.67em;
+  text-align: center;
+}
+
 .top-icon-list {
   position: fixed;
   margin: 0em;
