Switch from CC-BY-SA to CC-BY-NC-SA to match upstream license

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+    <link rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
   </head>
@@ -193,7 +193,7 @@ document.addEventListener ("DOMContentLoaded", () => {
 });
 </script>
   <p class="impressum">
-    <a href="https://creativecommons.org/licenses/by-sa/4.0/" title="CC-BY-SA 4.0"><img class="license-icon" src="images/icons/cc-by-sa-small.png"></img></a>
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" title="CC-BY-NC-SA 4.0"><img class="license-icon" src="images/icons/cc-by-nc-sa-small.png"></img></a>
     <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/icons/github.png"></img></a>
     <a href="https://quelltextlich.at/impressum.html">Impressum</a>
   </p>
