Add a build version marker

--- a/templates/html-template.html
+++ b/templates/html-template.html
@@ -197,6 +197,7 @@ document.addEventListener ("DOMContentLoaded", () => {
     <a href="https://github.com/scanarium/scanarium-handbook" title="Scanarium Handbook sources on GitHub"><img class="text-icon" src="images/icons/github.png"></img></a>
     <a href="https://quelltextlich.at/impressum.html">Impressum</a>
   </p>
+  <p id="build">{CI_BUILD_NR}</p>
 </div>
       </div>
     </div>
